# Radium

./: .gitignore  Doxyfile  icons.qrc
Plugins/: CMakeLists.txt
src/: CMakeGenerateVersion.txt  CMakeLists.txt
src/Core/: CoreMacros.hpp  KDTree.h  RaCore.hpp
src/Core/Algorithm/: Algorithm.hpp  Algorithm.inl  AlgorithmParameter.hpp
src/Core/Algorithm/Interface/: AlgorithmExecution.cpp  AlgorithmExecution.hpp  AlgorithmExecution.inl  AlgorithmInfo.cpp  AlgorithmInfo.hpp  AlgorithmInfo.inl  AlgorithmInterface.hpp  AlgorithmInterface.inl  AlgorithmSettings.cpp  AlgorithmSettings.hpp  AlgorithmSettings.inl  AlgorithmSettingsLoader.hpp  AlgorithmStage.hpp  AlgorithmStatistics.cpp  AlgorithmStatistics.hpp  AlgorithmStatistics.inl  AlgorithmStep.hpp  AlgorithmStep.inl  DefaultSettings.txt
src/Core/Algorithm/Subdivision/: BK2004.cpp  BK2004.hpp  BK2004.inl  DCELOperation.cpp  DCELOperation.hpp  FullEdgeOperation.cpp  FullEdgeOperation.hpp  SubdivisionHandler.cpp  SubdivisionHandler.hpp  SubdivisionHandler.inl
src/Core/Animation/Handle/: HandleWeightOperation.cpp
src/Core/Animation/Skinning/: DualQuaternionSkinning.cpp  RotationCenterSkinning.cpp
src/Core/BSP/: BSP.hpp  KDTree.hpp  KDTree.inl
src/Core/Containers/: VectorArray.hpp
src/Core/Event/: EventEnums.hpp  Key.hpp  MouseEvent.hpp
src/Core/Geometry/Normal/: Normal.cpp
src/Core/Geometry/Triangle/: TriangleOperation.cpp
src/Core/GraphStructures/: MultiGraph.cpp  MultiGraph.hpp  MultiGraph.tpp
src/Core/Index/: Index.hpp  Index.inl  IndexMap.hpp  IndexMap.inl  IndexedObject.cpp  IndexedObject.hpp
src/Core/Math/: LinearAlgebra.hpp  LinearAlgebra.inl
src/Core/Mesh/: MeshPrimitives.cpp  MeshUtils.cpp  MeshUtils.hpp
src/Core/Mesh/DCEL/: Dcel.cpp  Dcel.hpp  Dcel.inl  Definition.hpp  Face.cpp  Face.hpp  Face.inl  Flag.hpp  Flag.inl  FullEdge.cpp  FullEdge.hpp  FullEdge.inl  HalfEdge.cpp  HalfEdge.hpp  HalfEdge.inl  Vertex.cpp  Vertex.hpp  Vertex.inl
src/Core/Mesh/Wrapper/: Convert.cpp
src/Core/TreeStructures/: BVH.hpp  BVH.inl
src/Engine/: RaEngine.hpp  RadiumEngine.cpp  RadiumEngine.hpp
src/Engine/Assets/: AssimpGeometryDataLoader.hpp  AssimpHandleDataLoader.cpp  FileData.cpp  FileData.hpp  FileData.inl  GeometryData.hpp  HandleData.hpp
src/Engine/Component/: Component.cpp  Component.hpp  Component.inl
src/Engine/Entity/: Component.cpp  Entity.cpp  Entity.hpp  System.hpp
src/Engine/ItemModel/: ItemEntry.cpp  ItemEntry.hpp  ItemEntry.inl
src/Engine/Managers/ComponentMessenger/: ComponentMessenger.hpp  ComponentMessenger.inl
src/Engine/Managers/EntityManager/: EntityManager.cpp
src/Engine/Managers/ObjectsManager/: ObjectsManager.cpp  ObjectsManager.hpp  ObjectsManagerImpl.hpp
src/Engine/Managers/SystemDisplay/: SystemDisplay.cpp
src/Engine/Renderer/: RaytracingRenderer.cpp  RaytracingRenderer.hpp  Renderer.cpp  Renderer.hpp
src/Engine/Renderer/Light/: Light.cpp  Light.hpp
src/Engine/Renderer/Mesh/: Mesh.cpp
src/Engine/Renderer/OpenGL/: FBO.cpp  FBO.hpp
src/Engine/System/: System.cpp  System.hpp
src/Gui/: Application.cpp  Application.hpp  ArgProcessor.cpp  ArgProcessor.hpp  RaGuiBase.hpp  Viewer.cpp  Viewer.hpp
src/Gui/Camera/: CameraInterface.cpp  CameraInterface.hpp  TrackballCamera.cpp  TrackballCamera.hpp
src/Gui/Gizmo/: Gizmo.hpp  GizmoManager.cpp  GizmoManager.hpp  RotateGizmo.cpp  RotateGizmo.hpp  TranslateGizmo.cpp  TranslateGizmo.hpp
src/Gui/PluginBase/: RadiumPluginInterface.hpp
src/Gui/TimerData/: FrameTimerData.cpp  FrameTimerData.hpp
src/GuiBase/TransformEditor/: TransformEditor.cpp
src/GuiBase/TreeModel/: EntityTreeModel.cpp
src/GuiBase/Viewer/: Viewer.cpp  Viewer.hpp
src/MainApplication/: EventTranslator.cpp  EventTranslator.hpp  MainApplication.cpp  MainApplication.hpp  main.cpp
src/MainApplication/Gui/: MainWindow.cpp  MainWindow.hpp  Viewer.cpp  Viewer.hpp
src/MainApplication/ImGui/: CMakeLists.txt  CMakeLists.txt.pouf  LICENSE  imgui_gl3.cpp  imgui_gl3.hpp  imgui_node_graph.cpp  imgui_node_graph.hpp  imgui_node_graph.tpp
src/MainApplication/Viewer/: CameraInterface.hpp  TrackballCamera.cpp  TrackballCamera.hpp  Viewer.cpp  Viewer.hpp
src/Plugins/Animation/: AnimationComponent.cpp  AnimationComponent.hpp  AnimationLoader.cpp  AnimationSystem.cpp
src/Plugins/FancyMesh/: FancyMeshComponent.cpp  FancyMeshComponent.hpp  FancyMeshLoader.cpp  FancyMeshSystem.cpp
src/QRadium/: EventTranslator.cpp  EventTranslator.hpp  MainApplication.cpp  MainApplication.hpp  main.cpp
src/QRadium/Gui/: ColorWidget.cpp  ColorWidget.hpp  EntityTreeItem.cpp  EntityTreeItem.hpp  EntityTreeModel.cpp  EntityTreeModel.hpp  MainWindow.cpp  MainWindow.hpp  MaterialEditor.cpp  MaterialEditor.hpp  RotationEditor.hpp  TransformEditorWidget.cpp  TransformEditorWidget.hpp  VectorEditor.hpp  Viewer.cpp  Viewer.hpp
src/QRadium/TimerData/: FrameTimerData.cpp
src/Tests/CoreTests/: Tests.hpp  main.cpp
(+204 files in other folders)
